--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
     />
     <title>Space Tourism</title>
   </head>
-  <body>
+  <body class="bg-pages bg-home">
     <header class="header">
       <a href="#">
         <img
+          class="logo"
           src="./assets/img/icons/icon.svg"
           alt="icon"
         />
@@ -76,25 +77,25 @@
       </nav>
     </header>
     <main class="main">
-        <section class="content-home">
-            <article class="content-space">
-              <h1>SO, YOU WANT TO TRAVEL TO</h1>
-              <span>SPACE</span>
-              <p>
-                Let’s face it; if you want to go to space, you might as well genuinely go to
-                outer space and not hover kind of on the edge of it. Well sit back, and relax
-                because we’ll give you a truly out of this world experience!
-              </p>
-            </article>
-            <article class="content-explore">
-              <a href="./pages/destination.html">
-                <div><span>explore</span>
-                  <div class="explore__scale"></div>
-                </div>
-              </a>
-          </article>
-          </section>
+      <section class="content-home">
+        <article class="content-space">
+          <h1>SO, YOU WANT TO TRAVEL TO</h1>
+          <span>SPACE</span>
+          <p>
+            Let’s face it; if you want to go to space, you might as well genuinely go to
+            outer space and not hover kind of on the edge of it. Well sit back, and relax
+            because we’ll give you a truly out of this world experience!
+          </p>
+        </article>
+        <article class="content-explore">
+          <a href="./pages/destination.html">
+            <div>
+              <span>explore</span>
+              <div class="explore__scale"></div>
+            </div>
+          </a>
+        </article>
+      </section>
     </main>
-    <div class="bg-home bg-pages"></div> 
   </body>
 </html>
